# cmake_minimum_required(VERSION <specify CMake version here>)
project(cpp_notes)

set(CMAKE_CXX_STANDARD 11)

#add_executable(this_pointer this_pointer.cpp)
#add_executable(op_reload op_reload.cpp)
#add_executable(op_equal_reload op_equal_reload.cpp)
#add_executable(const_obj_quote const_obj_quote.cpp)
#add_executable(op_reload_2friend op_reload_2friend.cpp)
#add_executable(dynamic_int_array dynamic_int_array.cpp)
#add_executable(shift_op_reload shift_op_reload.cpp)
#add_executable(increment_decrement_op_reload increment_decrement_op_reload.cpp)
#add_executable(inherit_derive inherit_derive.cpp)
#add_executable(inherit_or_compound_ralationship inherit_or_compound_ralationship.cpp)
#add_executable(same_name_in_base_and_derive_protected same_name_in_base_and_derive_protected.cpp)
#add_executable(derivedclass_constructor derivedclass_constructor.cpp)
#add_executable(public_inherit_assign_rules public_inherit_assign_rules.cpp)
#add_executable(virtualFunction_polymorphic virtualFunction_polymorphic.cpp)
#add_executable(polymorphicGame polymorphicGame.cpp)
#add_executable(polymorphic_example polymorphic_example.cpp)
#add_executable(virtual_destructor_func virtual_destructor_func.cpp)
#add_executable(pureVirtualFunc_and_AbstractClass pureVirtualFunc_and_AbstractClass.cpp)
#add_executable(file_op file_op.cpp)
#add_executable(function_template function_template.cpp)
#add_executable(class_template class_template.cpp)
#add_executable(string_class string_class.cpp)
#add_executable(input_output input_output.cpp)
#add_executable(STL_Outline STL_Outline.cpp)
add_executable(STL_Outline_alg STL_Outline_alg.cpp)
